src/modal/_pera-wallet-modal.scss
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap");
@import "../ui/styles/media-queries";

.pera-wallet-connect-modal {
  --pera-wallet-connect-modal-font-family: "Inter", sans-serif;

  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  z-index: 10;

  width: 100vw;
  height: 100vh;

  background-color: rgba(0, 0, 0, 0.3);

  font-family: var(--pera-wallet-connect-modal-font-family);

  // Although this is not a standard, Design team suggest that we use it so supported browsers will use it
  // stylelint-disable-next-line property-no-unknown
  font-smooth: antialiased;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  * {
    box-sizing: border-box;
  }

  li {
    list-style-type: none;

    margin: 0;
    padding: 0;
  }
}

.pera-wallet-connect-button {
  display: flex;
  align-items: center;
  justify-content: center;

  width: auto;
  height: 48px;

  padding: 14px;

  border: none;
  border-radius: 12px;
  outline: none;

  cursor: pointer;

  font-family: var(--pera-wallet-connect-modal-font-family);
  font-size: 14px;
}

.pera-wallet-connect-modal__logo img {
  display: block;

  width: 32px;
}

.pera-wallet-connect-modal__close-button {
  width: 40px;
  height: 40px;

  margin: 0;
  padding: 0;

  background: #333333;
  border: 1.5px solid rgba(255, 255, 255, 0.08);
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);

  border-radius: 100%;
}

.pera-wallet-connect-modal__body {
  position: relative;
  top: 50%;
  left: 50%;

  width: 655px;
  max-width: calc(100vw - 80px);

  padding: 28px;

  background-color: #edeffb;

  box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.08);

  border-radius: 24px;

  animation: 0.3s slideAnimationForModal ease-out;

  transform: translate(-50%, -50%);

  &::before {
    --background-line: #1e0972 0 1.2px, transparent 0 calc(100% - 1.2px), #1e0972;

    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: -1;

    content: "";

    background-image: linear-gradient(var(--background-line)),
      linear-gradient(90deg, var(--background-line));
    background-size: 116px 116px;

    mix-blend-mode: overlay;

    border-radius: 24px;

    opacity: 0.8;

    pointer-events: none;
  }
}

.pera-wallet-connect-modal__body__header {
  display: flex;
  align-items: center;
  justify-content: flex-end;

  position: absolute;
  top: -44px;
  right: -44px;
  left: 0;
}

@include for-small-screens {
  .pera-wallet-connect-modal__body {
    top: 40px;
    bottom: 0;
    left: 0;

    width: 100%;
    max-width: unset;
    height: calc(calc(100 * var(--vh)));

    padding: 20px;

    background-color: #ffffff;

    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.02), 0 4px 12px rgba(0, 0, 0, 0.03);

    border-radius: 20px 20px 0px 0px;

    transform: unset;

    &::before {
      background-image: unset;
    }
  }

  .pera-wallet-connect-modal__body__header {
    display: flex;
    align-items: center;
    justify-content: flex-end;

    position: static;
  }

  .pera-wallet-connect-modal__close-button {
    width: 24px;
    height: 24px;

    margin: 0;
    padding: 0;

    background: transparent;
    border: unset;
    box-shadow: unset;
  }
}

@keyframes slideAnimationForModal {
  0% {
    opacity: 0;

    transform: translate(-50%, calc(-50% + 24px));
  }

  100% {
    opacity: 1;

    transform: translate(-50%, -50%);
  }
}

